Hidden score overlay with large font may be messing up font size rendering on production. All sizing now within the component. Was also being initially populated with 'undefined' which may have also caused sizing issues. Now also using a font more suited to taking up as much space as possible for single-digit scores, scores 10-19 and 20-29 without causing overflow.

--- a/style.css
+++ b/style.css
@@ -201,11 +201,6 @@ a:active {
     font-weight: 700;
 }
 
-#selectedScore {
-    font-size: 24em;
-    font-weight: 700;
-}
-
 
 @media ((hover: hover) and (width > 65rem)), ((hover: none) and (orientation: landscape) /* maxTitleWidth + sidebars of width buttonWidth and gap */ ) {
     :root {
